# yolo_binding

./: Cargo.toml  readme.md
src/core/: export.rs  load.rs  mod.rs  predict.rs
src/utils/: mod.rs  picture.rs
yolo-cli/: Cargo.toml  readme.md
yolo-cli/src/: lib.rs  main.rs
